--- a/portfolio.html
+++ b/portfolio.html
@@ -1091,7 +1091,7 @@
 /* Background images container */
 .background-container {
   z-index: 1;
-  background: #000;
+  background: #b1b1b1;
 }
 
 /* Individual background images */
@@ -1119,8 +1119,8 @@
 }
   .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  transition: opacity 0.5s ease-in-out;
-  opacity: 0.75;
+  transition: opacity 0.1s ease-in-out;
+  opacity: 0.8;
 }
     .portfolio-hover-item:hover .portfolio-hover-item-title span {
   opacity: 1;
