--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
     grid-area: 1/2/4/10;
     z-index: 6;
     @media (max-width: 767px) {
-      margin-left: 1rem;
+      text-align: center;
       margin-top: 0.5rem;
     }
   }
