--- a/portfolio.html
+++ b/portfolio.html
@@ -1118,7 +1118,7 @@
   .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   transition: opacity 0.1s ease-in-out;
-  opacity: 0.8;
+  opacity: 1;
 }
   @media (pointer: coarse) and (max-width: 768px) {
   .portfolio-hover-item-title span {
@@ -1131,10 +1131,17 @@
 
   
 /* Add to existing styles */
+.portfolio-hover-item-title {
+  position: relative;
+  display: inline-flex; /* Stabilize layout */
+}
+
 .portfolio-hover-item-title span {
   text-align: center;
-  margin-right: 1rem;
-  margin-left: 1rem;
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  transition: opacity 0.3s ease-in-out; /* Slower transition */
+  will-change: opacity; /* Optimize rendering */
 }
 
 /* Non-mobile styles */
@@ -1145,8 +1152,10 @@
 
   li:not(:last-child) .portfolio-hover-item-title::after {
     content: "/";
-    margin: 0 1rem; /* Same margins as the span */
+    margin: 0 0.5rem; /* Same margins as the span */
     display: inline-block;
+    position: relative;
+    transform: translateZ(0); /* Force hardware acceleration */
   }
 }
 </style>
