--- a/portfolio.html
+++ b/portfolio.html
@@ -1119,6 +1119,8 @@
   text-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
   transition: opacity 0.1s ease-in-out;
   opacity: 1;
+    
+    opacity: 1 !important;
 }
   @media (pointer: coarse) and (max-width: 768px) {
   .portfolio-hover-item-title span {
