--- a/portfolio/mieszkanie_planety.html
+++ b/portfolio/mieszkanie_planety.html
@@ -1173,7 +1173,8 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'mieszkanie_planety.jpg' }
+    { content: 'mieszkanie_planety.jpg' },
+    { content: 'mieszkanie planety2.jpg' }
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
