--- a/portfolio/test.html
+++ b/portfolio/test.html
@@ -1069,7 +1069,7 @@
   
 <h2 style="white-space:pre-wrap;"><!--
 TYTUŁ
--->Tutaj się wpisuje tytuł.<!--
+-->test<!--
 TYTUŁ
 --></h2>
 </div>
@@ -1173,11 +1173,8 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'obrazek1.jpg' },
-    { content: 'obrazek2.jpg' },
-    { content: 'obrazek3.jpg' },
-    { content: 'obrazek4.jpg' },
-    { content: 'obrazek5.jpg' }
+    { content: 'test.jpg' }
+ 
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
